argocd/base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20.3014-ls326
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /tv
              subPath: tv
            - name: media
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
