argocd/base/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: pocket-id-auth
          namespace: pocket-id
      services:
        - name: sonarr
          port: 8989
  tls: {}
